[B]v.0.9.7[/B]
--------------
More Eden standardization - Issue 40
Added Logo support in DialogFullScreenInfo

[B]v.0.9.6[/B]
Updated Music Info screen
Added Low List view to Music
Removed List view from Music

[B]v0.9.5[/B]
Revised Music OSD
Added Now Playing OSD/Controls

[B]v0.9.4[/B]
--------------
Removed unused files
Added ClearArt support on seekbar


[B]v0.9.3[/B]
--------------
- Fixed temperature
- Fixed Logo view and remove reflection
- Fixed Day display
- Fix missing toasts when toggling subtitles on/off, or switching between subtitle tracks
- Changed all occurances of "Min" to "min" and localized.
- Clean up scroll bars & nibs
- Fixed Content/Scraper Dialog overlapping weather/temperature
- Updated RSS font to Ubuntu font
- Fixed weather icon on home page
- Updated startup playlist to use Smart playlist


[B]v0.9.2[/B]
--------------
- First submission by stoli
- Quick fixes to get running in Eden
- Version change to get Eden compliant

v0.91 Alpha2
-------------
- Fixed some Linux capitalization errors
- Fixed Fanart view movie set posters not showing
- Added missing "Movie Set" label on various viewtypes
- Added landscape.jpg option to Fanart view for TV Shows
- Changed round button animations
- Fixed German translation for "Movie Set"
- Increase default home style time per image
- Can no longer press left on Default Home style when Recently Added is turned off
- Attempt to Make Video Genre screens smoother when descriptions are hidden
- Added more studio logos


v0.90 Alpha
------------
- Initial release to public for testing