@@ -26,6 +26,7 @@
 	<include file="Viewtype_Poster_Fixed.xml" />
 	<include file="Viewtype_Poster_Wrap.xml" />
 	<include file="Viewtype_TallGenre.xml" />
+	<include file="Viewtype_PosterAndFanart.xml" />
 	<!-- Global dimensions -->
 	<include name="Dimensions_Fullscreen">
 		<posx>0</posx>
