@@ -57,7 +57,7 @@
 				<control type="image">
 					<include>PosterMediaFlagsVars</include>
 					<texture fallback="flags/default.png">flags/Source/hdtv.png</texture>
-					<visible>substring(listitem.filename,hdtv) | substring(listitem.filename,pdtv) | [[!substring(listitem.filename,sdtv) + !substring(listitem.filename,bluray) + !substring(listitem.filename,hddvd) + !substring(listitem.filename,sddvd) + !substring(listitem.filename,blu-ray) + !substring(listitem.filename,brrip) + !substring(listitem.filename,bdrip) + !substring(listitem.filename,tvrip) + !substring(listitem.filename,.evo,Right) + !substring(listitem.filename,.mt2s,Right) + !substring(listitem.filename,.ifo,Right) + !substring(listitem.filename,.vob,Right) + !substring(listitem.filename,r5) + !substring(listitem.filename,dvdscr) + !substring(listitem.filename,screener) + !substring(listitem.filename,web-dl) + !substring(listitem.filename,webrip) + !substring(listitem.filename,dvd)] + Container.Content(episodes) + [substring(listitem.VideoResolution,720) | substring(listitem.VideoResolution,1080]]</visible>
+					<visible>substring(listitem.filename,hdtv) | substring(listitem.filename,pdtv) | [[!substring(listitem.filename,sdtv) + !substring(listitem.filename,bluray) + !substring(listitem.filename,hddvd) + !substring(listitem.filename,sddvd) + !substring(listitem.filename,blu-ray) + !substring(listitem.filename,brrip) + !substring(listitem.filename,bdrip) + !substring(listitem.filename,tvrip) + !substring(listitem.filename,.evo,Right) + !substring(listitem.filename,.mt2s,Right) + !substring(listitem.filename,.ifo,Right) + !substring(listitem.filename,.vob,Right) + !substring(listitem.filename,r5) + !substring(listitem.filename,dvdscr) + !substring(listitem.filename,screener) + !substring(listitem.filename,web-dl) + !substring(listitem.filename,webrip) + !substring(listitem.filename,dvd)] + Container.Content(episodes) + [substring(listitem.VideoResolution,720) | substring(listitem.VideoResolution,1080)]]</visible>
 				</control>
 				<control type="image">
 					<include>PosterMediaFlagsVars</include>
