@@ -1,5 +1,5 @@
 ﻿<window id="25">
-	<views>905,55,53,57,512,52,503,504,509,508,511,510,54,59,58,56,501</views>
+	<views>905,55,53,57,550,512,52,503,504,509,508,511,510,54,59,58,56,501</views>
 	<defaultcontrol always="true">9999</defaultcontrol>
 	<allowoverlay>yes</allowoverlay>
 	<controls>
@@ -46,6 +46,7 @@
 		<include>Viewtype_Files</include>				<!-- 55 -->
 		<include>Viewtype_Poster_Fixed</include>		<!-- 53 -->
 		<include>Viewtype_Poster_Wrap</include>			<!-- 57 -->
+		<include>Viewtype_PosterAndFanart</include>		<!-- 550 -->
 		<include>Viewtype_Coverflow</include>			<!-- 512 -->
 		<include>Viewtype_Landscape</include>			<!-- 52 -->
 		<include>Viewtype_List</include>				<!-- 503 -->
