@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <addon 
 	id="skin.metropolis" 
-	version="0.9.7" 
+	version="0.9.8" 
 	name="Metropolis" 
 	provider-name="Amra">
   <requires>
     <import addon="xbmc.gui" version="3.00"/>
-	<import addon="script.logo-downloader" version="2.0.0"/>
+	<import addon="script.artwork.downloader" version="1.0.3"/>
 	<import addon="script.favourites" version="1.0.3"/>
 	<import addon="script.randomitems" version="1.0.6"/>
   </requires>
