@@ -310,4 +310,5 @@
 	<string id="31421">Enable Clearart in Video OSD</string>
 	<string id="31422">Display TV Logo instead of Thumbnail on Info Screen</string>
 	<string id="31423">Author</string>
+	<string id="31424">Poster &amp; Fanart</string> 
 </strings>
